--- a/06-WebContentStructure/aaaaaa.html
+++ b/06-WebContentStructure/aaaaaa.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <h1>Hello World!</h1>
-    <p>This is my first HTML document.</p>
-    <p>I already know the basic structure of an HTML document.</p>
+    
 </body>
-
 </html>
