--- a/06-WebContentStructure/countries.html
+++ b/06-WebContentStructure/countries.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interesting Data Table</title>
 </head>
+
 <body>
     <table border="1">
         <tr>
@@ -25,6 +27,19 @@
             <td>3.1</td>
             <td>Real (BRL)</td>
         </tr>
+        <tr>
+            <td>Finland</td>
+            <td>Helsinki</td>
+            <td>5.6</td>
+            <td>Euro (EUR)</td>
+        </tr>
+        <tr>
+            <td>Canada</td>
+            <td>Ottawa</td>
+            <td>41.2</td>
+            <td>Canadian Dollar (CAD)</td>
+        </tr>
     </table>
 </body>
+
 </html>
