--- a/06-WebContentStructure/AI.html
+++ b/06-WebContentStructure/AI.html
@@ -104,5 +104,13 @@
         life in the years to come.</p>
     <a href="https://en.wikipedia.org/wiki/Siri">Siri on wikipedia</a>
 </body>
+<h2>Survey</h2>
+<p>Here is a survey about your knowledge
+of issues related to artificial
+intelligence. The survey is anonymous.
+<a href="file:///C:/Users/jstrz/OneDrive/Pulpit/data-notations/06-WebContentStructure/survey.html">Please fill out the survey.</a> The survey
+results will be helpful in examining
+the degree of use of artificial
+intelligence in different age groups.</p>
 
 </html>
