--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -23,6 +23,17 @@
             text-align: justify;
             font-family: 'Arial', sans-serif;
         }
+
+        h2 {
+            margin: 20px auto;
+            color: #584879;
+            padding: 15px;
+        }
+        ul {
+            color: #B00B56;
+            margin: 5px auto;
+            border-bottom: 3px solid #182398;
+        }
     </style>
 </head>
 
