--- a/07-WebContentFormatting/facts-external.html
+++ b/07-WebContentFormatting/facts-external.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="externalfacts.css">
-
+<link rel="stylesheet" href="external-facts.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
