--- a/07-WebContentFormatting/facts-internal.html
+++ b/07-WebContentFormatting/facts-internal.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<style>
-    h1 {
-        color: blue;
-        font-size: 28px;
-    }
 
-    p {
-        color: gray;
-    }
-</style>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interesting Facts</title>
 </head>
+<style>
+    body {
+        h1 {
+    color: blue;
+    font-size: 28px;
+}
+
+p {
+    color: gray;
+}
+    }
+</style>
 
 <body>
 
