--- a/07-WebContentFormatting/family.html
+++ b/07-WebContentFormatting/family.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h2>Family Information Form</h2>
+    <h2>Family Information Form</h2><br>
 
     <form action="#" method="post">
         <div>
