--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -6,33 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famous Landmarks Around the World</title>
     <style>
-        /* Styling for h1 */
         h1 {
-            padding: 20px;
+            color: #227a22;
             margin: 20px auto;
-            background-color: lightgray;
-            text-align: center;
-        }
-
-        /* Styling for p */
-        p {
-            width: 550px;
-            padding: 15px;
-            border-bottom: 2px solid gray;
-            margin: 10px auto;
-            text-align: justify;
-            font-family: 'Arial', sans-serif;
+            border: 2px solid black;
         }
 
         h2 {
-            margin: 20px auto;
-            color: #584879;
-            padding: 15px;
+            color: #452BB1;
+            margin: 50px auto;
+            border: 10px solid pink;
         }
-        ul {
-            color: #B00B56;
-            margin: 5px auto;
-            border-bottom: 3px solid #182398;
+
+        p{
+            color: #89B00B;
+            margin: 10px auto;
+            border: 5px solid purple;
+        }
+
+        ul{
+            color: #245AB1;
+            margin: 20px auto;
+            border: 8px solid red;
         }
     </style>
 </head>
